--- a/style.css
+++ b/style.css
@@ -6,13 +6,60 @@ body {
     color: white;
 }
 
-h1 {
-    background: #7F7FD5;
-    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
-    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+#deleteYes {
+    width: 140px;
+    height: 80px;
+    border-radius: .8rem;
+    position: absolute;
+    background-color: lightcoral;
+    left: 15%;
+    font-size: 25px;
+
+}
+
+#deleteNo{
+    width: 140px;
+    height: 80px;
+    border-radius: .8rem;
+    position: absolute;
+    left: 60%;
+    font-size: 25px;
+}
+  
+#saveYes{
+    width: 140px;
+    height: 80px;
+    border-radius: .8rem;
+    position: absolute;
+    background-color: lightcoral;
+    left: 15%;
+    font-size: 25px;
+}
+
+#saveNo{
+    width: 140px;
+    height: 80px;
+    border-radius: .8rem;
+    position: absolute;
+    left: 60%;
+    font-size: 25px;
+}
+
+#modalDelete{
+    border-radius: .8rem;
+    width: 30%;
+    height: 30%;
+}
+#modalSave{
+    border-radius: .8rem;
+    width: 30%;
+    height: 30%;
+}
+
+#modalStart{
+    border-radius: .8rem;
+    width: 30%;
+    height: 60%;
 }
 
 .container {
@@ -30,7 +77,14 @@ h1 {
     flex-direction: column;
     padding: 5px;
     width: 70px;
-    background-color: #202020;
+    height: 400px;
+    position: absolute;
+    top : 25%;
+    background-color: #e7e7e7;
+    border-top-right-radius: .8rem;
+    border-bottom-right-radius: .8rem;
+    outline-style: auto;
+    outline-color: darkgrey;
 }
 
 #toolbar * {
@@ -39,6 +93,7 @@ h1 {
 
 #toolbar label {
     font-size: 12px;
+    color: black;
 }
 
 #toolbar input {
@@ -48,7 +103,8 @@ h1 {
 #toolbar button {
     background-color: #1565c0;
     border: none;
-    border-radius: 4px;
+    border-radius: 100%;
+    height: 70px;
     color:white;
     padding: 2px;
 }
@@ -57,7 +113,7 @@ h1 {
     width: 130px;
     height: 130px;
     border-radius: 100%;
-    background-color: white;
+    background-color: lightgrey;
     border-color: grey;
     position:absolute;
     top:2%;
@@ -67,7 +123,7 @@ h1 {
     width: 130px;
     height: 130px;
     border-radius: 100%;
-    background-color: white;
+    background-color: lightgrey;
     border-color: grey;
     position:absolute;
     top:2%;
